Fix alignment of fieldset controls in Prevalue Editor

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -95,6 +95,8 @@
     }
 }
 
+.archetypeConfig .archetypeEditorControls { float: right; }
+
 .archetypeEditor form {
     margin-left:20px;
 
